--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Server Configuration
 PORT=3000
+APP_TYPE=api
+
+# Telephony Server Configuration
+TELEPHONY_PORT=3001
 
 # Redis Configuration
 REDIS_HOST=redis
