--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 # Server Configuration
 PORT=3000
+APP_TYPE=api
+
+# Telephony Server Configuration
+TELEPHONY_PORT=3001
 
 # Redis Configuration
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 
 # OpenAI Configuration
