--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_TYPE=api
 TELEPHONY_PORT=3001
 
 # Redis Configuration
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 
 # OpenAI Configuration
