--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@nestjs/microservices": "^11.0.20",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.0.20",
+    "@nestjs/platform-ws": "^11.0.20",
     "@nestjs/swagger": "^11.1.5",
     "@nestjs/websockets": "^11.0.20",
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.5.10",
     "axios": "^1.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -43,8 +45,10 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
